--- a/views/editAasiaSteelCard.ejs
+++ b/views/editAasiaSteelCard.ejs
@@ -123,127 +123,75 @@
 			</div>
 			<div style="border: 2px black solid; margin-top: 10px">
 				<table id="table-2" style="width: 100%">
-					<tr>
-						<td>Card No</td>
-						<td>
-							<input
-								type="text"
-								hidden
-								name="card_no"
-								id=""
-								value="<%=record.card_no %>" />
-						</td>
-						<td>Welding Process & Type</td>
-						<td>
-							<input
-								type="text"
-								value="<%=record.welding_process_and_type %>"
-								name="welding_process_and_type"
-								id="" />
-						</td>
-					</tr>
-					<tr>
-						<td>Direct or Remote Visual Control</td>
-						<td>
-							<input
-								type="text"
-								name="direct_or_remote_visual_control"
-								value="<%=record.direct_or_remote_visual_control %>"
-								id="" />
-						</td>
-						<td>Auto Arc Voltage Control (GTAW)</td>
-						<td>
-							<input
-								type="text"
-								value="<%=record.auto_arc_voltage_control %>"
-								name="auto_arc_voltage_control"
-								id="" />
-						</td>
-					</tr>
-					<tr>
-						<td>Automatic Joint Tracking</td>
-						<td>
-							<input
-								type="text"
-								name="automatic_joint_tracking"
-								value="<%=record.automatic_joint_tracking %>"
-								id="" />
-						</td>
-						<td>Position(s)</td>
-						<td>
-							<input
-								type="text"
-								value="<%=record.positions %>"
-								name="positions"
-								id="" />
-						</td>
-					</tr>
-					<tr>
-						<td>Base Material Dia & Thickness</td>
-						<td>
-							<input
-								type="text"
-								value="<%=record.base_material_dia_and_thickness %>"
-								name="base_material_dia_and_thickness"
-								id="" />
-						</td>
-						<td>Consumable Inserts (GTAW/PAW)</td>
-						<td>
-							<input
-								type="text"
-								value="<%=record.consumable_inserts %>"
-								name="consumable_inserts"
-								id="" />
-						</td>
-					</tr>
-					<tr>
-						<td>Backing (With or Without)</td>
-						<td>
-							<input
-								type="text"
-								value="<%=record.backing %>"
-								name="backing"
-								id="" />
-						</td>
-						<td>Single or Multiple Passes</td>
-						<td>
-							<input
-								type="text"
-								value="<%=record.single_or_multiple_passes %>"
-								name="single_or_multiple_passes"
-								id="" />
-						</td>
-					</tr>
-					<tr>
-						<td>Base Metal Spec / P-No</td>
-						<td>
-							<input
-								type="text"
-								value="<%=record.base_metal_spec_or_p_no %>"
-								name="base_metal_spec_or_p_no"
-								id="" />
-						</td>
-						<td>Filler Metal (SFA) Spec. / Class</td>
-						<td>
-							<input
-								type="text"
-								value="<%=record.filler_metal_spec_or_class %>"
-								name="filler_metal_spec_or_class"
-								id="" />
-						</td>
-					</tr>
-					<tr>
-						<td>Joint or Weld Type</td>
-						<td>
-							<input
-								type="text"
-								value="<%=record.joint_or_weld_type %>"
-								name="joint_or_weld_type"
-								id="" />
-						</td>
-						<td></td>
-						<td></td>
-					</tr>
+					<thead>
+						<tr style="background-color: #f8f9fa; font-weight: bold;">
+							<td style="border: 2px black solid; padding: 10px; text-align: center;">Welding Variable</td>
+							<td style="border: 2px black solid; padding: 10px; text-align: center;">Actual Values</td>
+							<td style="border: 2px black solid; padding: 10px; text-align: center;">Range Values</td>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td style="border: 2px black solid; padding: 8px; font-weight: bold;">Welding Process/Type</td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="welding_process_type_actual" value="<%=record.welding_process_type_actual || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="welding_process_type_range" value="<%=record.welding_process_type_range || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+						</tr>
+						<tr>
+							<td style="border: 2px black solid; padding: 8px; font-weight: bold;">Backing</td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="backing_actual" value="<%=record.backing_actual || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="backing_range" value="<%=record.backing_range || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+						</tr>
+						<tr>
+							<td style="border: 2px black solid; padding: 8px; font-weight: bold;">Diameter</td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="diameter_actual" value="<%=record.diameter_actual || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="diameter_range" value="<%=record.diameter_range || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+						</tr>
+						<tr>
+							<td style="border: 2px black solid; padding: 8px; font-weight: bold;">Base Metal P-No.</td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="base_metal_pno_actual" value="<%=record.base_metal_pno_actual || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="base_metal_pno_range" value="<%=record.base_metal_pno_range || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+						</tr>
+						<tr>
+							<td style="border: 2px black solid; padding: 8px; font-weight: bold;">Deposited Thickness</td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="deposited_thickness_actual" value="<%=record.deposited_thickness_actual || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="deposited_thickness_range" value="<%=record.deposited_thickness_range || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+						</tr>
+						<tr>
+							<td style="border: 2px black solid; padding: 8px; font-weight: bold;">Position & Prog.</td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="position_prog_actual" value="<%=record.position_prog_actual || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="position_prog_range" value="<%=record.position_prog_range || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+						</tr>
+						<tr>
+							<td style="border: 2px black solid; padding: 8px; font-weight: bold;">Filler Metal Class</td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="filler_metal_class_actual" value="<%=record.filler_metal_class_actual || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="filler_metal_class_range" value="<%=record.filler_metal_class_range || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+						</tr>
+						<tr>
+							<td style="border: 2px black solid; padding: 8px; font-weight: bold;">Filler Metal F-No.</td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="filler_metal_fno_actual" value="<%=record.filler_metal_fno_actual || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="filler_metal_fno_range" value="<%=record.filler_metal_fno_range || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+						</tr>
+						<tr>
+							<td style="border: 2px black solid; padding: 8px; font-weight: bold;">Use of Backing Gas</td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="backing_gas_actual" value="<%=record.backing_gas_actual || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="backing_gas_range" value="<%=record.backing_gas_range || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+						</tr>
+						<tr>
+							<td style="border: 2px black solid; padding: 8px; font-weight: bold;">Transfer Mode</td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="transfer_mode_actual" value="<%=record.transfer_mode_actual || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="transfer_mode_range" value="<%=record.transfer_mode_range || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+						</tr>
+						<tr>
+							<td style="border: 2px black solid; padding: 8px; font-weight: bold;">Current Type/Polarity</td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="current_type_polarity_actual" value="<%=record.current_type_polarity_actual || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="current_type_polarity_range" value="<%=record.current_type_polarity_range || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+						</tr>
+						<tr>
+							<td style="border: 2px black solid; padding: 8px; font-weight: bold;">Join/Weld Type</td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="join_weld_type_actual" value="<%=record.join_weld_type_actual || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+							<td style="border: 2px black solid; padding: 2px;"><input type="text" name="join_weld_type_range" value="<%=record.join_weld_type_range || '' %>" style="width: 100%; border: none; padding: 8px; box-sizing: border-box;"></td>
+						</tr>
+					</tbody>
 				</table>
 				<p style="border: 2px black solid; padding: 5px; font-size: 15px">
 					This card certifies the welder's qualification according to Aasia Steel standards and requirements.
