Add 'weldDate' field to certificate model and update related views. Enhanced forms in 'EditCertificate.ejs', 'insertCertificate.ejs', and 'viewCertificate.ejs' to include weld date input and display for improved data management.

--- a/views/EditCertificate.ejs
+++ b/views/EditCertificate.ejs
@@ -91,6 +91,9 @@
         <td style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;">Welder Id No</td>
         <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><input type="text" name="welderId"
             value="<%= record.welderId %>" id=""></td>
+          <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Weld Date</td>
+          <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><input type="text"
+              value="<%=record.weldDate %>" name="weldDate" id=""></td>  
         <tr>
 
           <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Base Metal Specification
