--- a/views/insertCertificate.ejs
+++ b/views/insertCertificate.ejs
@@ -84,6 +84,8 @@
       <tr>
         <td style="border: 1px solid black;font-weight: bold;">Welder ID No</td>
         <td style="border: 1px solid black;"><input type="text" name="welderId" id=""></td>
+        <td style="border: 1px solid black;font-weight: bold;">Weld Date</td>
+        <td style="border: 1px solid black;"><input type="text" name="weldDate" id=""></td>
       </tr>
       <tr>
         <!-- <td style="border: 1px solid black;font-weight: bold;">Certificate Ref No</td>
