--- a/views/viewCertificate.ejs
+++ b/views/viewCertificate.ejs
@@ -82,6 +82,12 @@ h6{font-size: 11px;}
         <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><%=record.jointType %></td>
       </tr>
       <tr>
+        <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Weld Date</td>
+        <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><%=record.weldDate %></td>
+        <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;"></td>
+        <td style="border: 1px solid black; padding: 4px; font-size: 12px;"></td>
+      </tr>
+      <tr>
         <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Date of Test</td>
         <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><%=record.date_of_test %></td>
         <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Weld Type</td>
