Update labels from 'Date of Test' to 'Date of Weld' across multiple views for consistency in welding documentation. Modified 'editCard.ejs', 'EditCertificate.ejs', 'insertCard.ejs', 'insertCertificate.ejs', 'viewCard.ejs', and 'viewCertificate.ejs' to reflect this change.

--- a/views/insertCard.ejs
+++ b/views/insertCard.ejs
@@ -130,7 +130,7 @@
         <td><input type="text" name="test_method" id=""></td>
       </tr>
       <tr>
-        <td>Date of Test</td>
+        <td>Date of Weld</td>
         <td><input type="date" name="date_of_test" id=""></td>
         <td>Date of Exp</td>
         <td><input type="date" name="date_of_expiry" id=""></td>
