--- a/views/insertCertificate.ejs
+++ b/views/insertCertificate.ejs
@@ -92,7 +92,7 @@
         <td style="border: 1px solid black;"></td> -->
         <td style="border: 1px solid black;font-weight: bold;">Joint Type</td>
         <td style="border: 1px solid black;"><input type="text" name="jointType" id=""></td>
-        <td style="border: 1px solid black;font-weight: bold;">Date of Test</td>
+        <td style="border: 1px solid black;font-weight: bold;">Date of Weld</td>
         <td style="border: 1px solid black;"><input type="text" name="date_of_test" id=""></td>
       </tr>
       <tr>
