--- a/views/viewCard.ejs
+++ b/views/viewCard.ejs
@@ -119,7 +119,7 @@
 					<td><%= record.test_method %></td>
 				</tr>
 				<tr>
-					<td>Date of Test</td>
+					<td>Date of Weld</td>
 					<td><%= record.date_of_test %></td>
 					<td>Date of Exp</td>
 					<td><%=record.date_of_expiry%></td>
