--- a/views/viewCertificate.ejs
+++ b/views/viewCertificate.ejs
@@ -88,7 +88,7 @@ h6{font-size: 11px;}
         <td style="border: 1px solid black; padding: 4px; font-size: 12px;"></td>
       </tr>
       <tr>
-        <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Date of Test</td>
+        <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Date of Weld</td>
         <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><%=record.date_of_test %></td>
         <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Weld Type</td>
         <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><%=record.weldType %></td>
