--- a/views/EditCertificate.ejs
+++ b/views/EditCertificate.ejs
@@ -107,7 +107,7 @@
         <tr>
         </tr>
         <tr>
-          <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Date of Test</td>
+          <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Date of Weld</td>
           <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><input type="text"
               value="<%=record.date_of_test %>" name="date_of_test" id=""></td>
           <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Weld Type</td>
