--- a/views/editCard.ejs
+++ b/views/editCard.ejs
@@ -287,7 +287,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td>Date of Test</td>
+						<td>Date of Weld</td>
 						<td>
 							<input
 								type="date"
