Update labels in 'EditCertificate.ejs', 'insertCertificate.ejs', and 'viewCertificate.ejs' to standardize terminology, changing 'Weld Date' to 'Date of Test' and correcting 'Transfer Mode' formatting for consistency across views.

--- a/views/viewCertificate.ejs
+++ b/views/viewCertificate.ejs
@@ -82,13 +82,13 @@ h6{font-size: 11px;}
         <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><%=record.jointType %></td>
       </tr>
       <tr>
-        <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Weld Date</td>
+        <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Date of Test</td>
         <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><%=record.weldDate %></td>
         <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;"></td>
         <td style="border: 1px solid black; padding: 4px; font-size: 12px;"></td>
       </tr>
       <tr>
-        <td style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;"> Date of  Weld</td>
+        <td style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;"> Date of Weld</td>
         <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><%=record.date_of_test %></td>
         <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Weld Type</td>
         <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><%=record.weldType %></td>
@@ -201,7 +201,7 @@ h6{font-size: 11px;}
       </tr>
       <tr>
         <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">
-          Transfer Mode( spary, globular, SHORT)
+          Transfer Mode (Spray, Globular, Short))
         </td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;"><%=record.transferModelActual %></td>
         <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;" colspan="2"><%=record.transferModelRange %></td>
