--- a/views/insertCertificate.ejs
+++ b/views/insertCertificate.ejs
@@ -84,7 +84,7 @@
       <tr>
         <td style="border: 1px solid black;font-weight: bold;">Welder ID No</td>
         <td style="border: 1px solid black;"><input type="text" name="welderId" id=""></td>
-        <td style="border: 1px solid black;font-weight: bold;">Weld Date</td>
+        <td style="border: 1px solid black;font-weight: bold;">Date of Test</td>
         <td style="border: 1px solid black;"><input type="text" name="weldDate" id=""></td>
       </tr>
       <tr>
@@ -204,7 +204,7 @@
       </tr>
       <tr>
         <td style="text-align: left; border: 1px solid black;font-weight: bold;">
-          Transfer Mode( spary, globular, SHORT)
+          Transfer Mode (Spray, Globular, Short))
         </td>
         <td style="text-align: left; border: 1px solid black;"><input type="text" name="transferModelActual" id=""></td>
         <td style="text-align: left; border: 1px solid black;" colspan="2"><input type="text" name="transferModelRange" id=""></td>
