Standardize label formatting in 'EditCertificate.ejs', 'insertCertificate.ejs', and 'viewCertificate.ejs' by adding non-breaking spaces to 'Date of Test' and 'Date of Weld', and correcting the 'Transfer Mode' label to remove extraneous parentheses for consistency across views.

--- a/views/insertCertificate.ejs
+++ b/views/insertCertificate.ejs
@@ -84,7 +84,7 @@
       <tr>
         <td style="border: 1px solid black;font-weight: bold;">Welder ID No</td>
         <td style="border: 1px solid black;"><input type="text" name="welderId" id=""></td>
-        <td style="border: 1px solid black;font-weight: bold;">Date of Test</td>
+        <td style="border: 1px solid black;font-weight: bold;">Date of<span style="color:white;">-</span>Test</td>
         <td style="border: 1px solid black;"><input type="text" name="weldDate" id=""></td>
       </tr>
       <tr>
@@ -92,7 +92,7 @@
         <td style="border: 1px solid black;"></td> -->
         <td style="border: 1px solid black;font-weight: bold;">Joint Type</td>
         <td style="border: 1px solid black;"><input type="text" name="jointType" id=""></td>
-        <td style="border: 1px solid black;font-weight: bold;">Date of Weld</td>
+        <td style="border: 1px solid black;font-weight: bold;">Date of<span style="color:white;">-</span>Weld</td>
         <td style="border: 1px solid black;"><input type="text" name="date_of_test" id=""></td>
       </tr>
       <tr>
@@ -204,7 +204,7 @@
       </tr>
       <tr>
         <td style="text-align: left; border: 1px solid black;font-weight: bold;">
-          Transfer Mode (Spray, Globular, Short))
+          Transfer Mode (Spray, Globular, Short)
         </td>
         <td style="text-align: left; border: 1px solid black;"><input type="text" name="transferModelActual" id=""></td>
         <td style="text-align: left; border: 1px solid black;" colspan="2"><input type="text" name="transferModelRange" id=""></td>
