--- a/views/EditCertificate.ejs
+++ b/views/EditCertificate.ejs
@@ -91,7 +91,7 @@
         <td style="border: 1px solid black; font-weight: bold; padding: 4px; font-size: 12px;">Welder Id No</td>
         <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><input type="text" name="welderId"
             value="<%= record.welderId %>" id=""></td>
-          <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Date of Test</td>
+          <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Date of<span style="color:white;">-</span>Test</td>
           <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><input type="text"
               value="<%=record.weldDate %>" name="weldDate" id=""></td>  
         <tr>
@@ -107,7 +107,7 @@
         <tr>
         </tr>
         <tr>
-          <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Date of Weld</td>
+          <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Date of<span style="color:white;">-</span>Weld</td>
           <td style="border: 1px solid black; padding: 4px; font-size: 12px;"><input type="text"
               value="<%=record.date_of_test %>" name="date_of_test" id=""></td>
           <td style="border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">Weld Type</td>
@@ -268,7 +268,7 @@
         </tr>
         <tr>
           <td style="text-align: left; border: 1px solid black;font-weight: bold; padding: 4px; font-size: 12px;">
-            Transfer Mode (Spray, Globular, Short))
+            Transfer Mode (Spray, Globular, Short)
           </td>
           <td style="text-align: left; border: 1px solid black; padding: 4px; font-size: 12px;"><input
               value="<%=record.transferModelActual %>" type="text" name="transferModelActual" id=""></td>
