feat: add EJS template for Aasia Steel welder qualification card view.

--- a/views/viewAasiaSteelCard.ejs
+++ b/views/viewAasiaSteelCard.ejs
@@ -250,9 +250,9 @@
 				padding: 5px;
 			}
 
+			/* Removed green text rule */
 			td:nth-child(even) {
-				color: #14ab55;
-				/* Apply your styling for even rows */
+				color: black;
 			}
             
             .fw-bold {
