--- a/views/insertAasiaSteelCard.ejs
+++ b/views/insertAasiaSteelCard.ejs
@@ -11,6 +11,9 @@
 <body style="width: 216mm; height: 279mm; margin: auto">
 
   <form action="/aasia-steel-card/insert" method="post" enctype="multipart/form-data">
+    <!-- Hidden input to store JSON data - Placed at top for reliable Multer parsing -->
+    <input type="hidden" name="tableData" id="tableDataInput">
+    
   <div class="card">
     <div class="flex-between">
       <img  style="width: 150px; height: 100px;" class="logo" src="/images/logo.png" alt="logo" />
@@ -67,8 +70,6 @@
     </div>
   </div>
     <div style="border: 2px black solid; margin-top: 10px;">
-    <!-- Hidden input to store JSON data -->
-    <input type="hidden" name="tableData" id="tableDataInput">
     
     <!-- Global Click Listener to close menus -->
     <div id="click-overlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; z-index:90;" onclick="hideMenus()"></div>
